--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,8 @@ Flask-SQLAlchemy==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
+psycopg2-binary==2.9.10
+setuptools==75.6.0
 SQLAlchemy==2.0.36
 typing_extensions==4.12.2
 Werkzeug==3.1.3
-gunicorn
